[package]
name = "rust-mirror"
version = "0.1.0"
authors = ["WayJam So <imsuwj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "2.0.0"
serde_json = "1.0.51"
structopt = "0.3.13"
