[package]
name = "rust-mirror"
version = "0.1.0"
authors = ["WayJam So <imsuwj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "2.0.0"
actix-server = "1.0.2"
serde_json = "1.0.51"
serde = "1.0.111"
clap = "2.33.1"
